Possible whitespace fix

--- a/src/components/css/_index.scss
+++ b/src/components/css/_index.scss
@@ -19,7 +19,7 @@ h4 {
     font-size: 2.5em !important;
 }
 
-#gatsby-announcer, #query-on-demand-indicator-element {
+gatsby-qod {
     overflow-y: hidden;
     margin: 0;
     padding: 0;
